--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,113 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/e1c1163e5c.js" crossorigin="anonymous"></script>
+
+       <script src="path/to/bootstrap.js"></script>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <div class="container">
+
+      <a class="navbar-brand " href="/"><span>Bookers</span></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+
+   <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+
+     <% if user_signed_in? %>
+
+      <li>
+        <%= link_to users_path, class: 'nav-link text-light' do %>
+      <i class="fa-solid fa-house"></i>Home
+        <% end %>
+      </li>
+
+　　  <li>
+　　     <%= link_to users_path, class: 'nav-link text-light' do %>
+        <i class="fa-solid fa-users"></i>Users
+        <% end %>
+      </li>
+
+      <li>
+         <%= link_to books_path ,class: 'nav-link text-light' do %>
+        <i class="fa-solid fa-book-open"></i>Books
+         <% end %>
+      </li>
+
+       <li>
+         <%= link_to destroy_user_session_path,  method: :delete , class: 'nav-link text-light' ,rel: "nofollow" do%>
+       <i class="fa-solid fa-right-from-bracket"></i>Log out
+         <% end %>
+      </li>
+
+    <% else %>
+ <li class="nav-item">
+        <%= link_to root_path , class: 'nav-link text-light' do %>
+         <i class="fa-solid fa-house"></i>Home
+        <% end %>
+      </li>
+
+
+      <li class="nav-item">
+        <%= link_to about_path , class: 'nav-link text-light' do %>
+        <i class="fa-solid fa-link"></i>About
+        <% end %>
+      </li>
+
+      <li  class="nav-item">
+        <%= link_to new_user_registration_path ,class: 'nav-link text-light' do %>
+       <i class="fa-solid fa-user-plus"></i>Sign up
+        <% end %>
+      </li>
+
+       <li class="nav-item">
+         <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+        <i class="fa-solid fa-right-to-bracket"></i> Log in
+         <% end %>
+      </li>
+
+      <% end %>
+   </ul>
+
+ </div>
+ </div>
+ </nav>
+
+</header>
+
+ <main class="container ">
+  <%= yield %>
+ </main>
+
+  <footer>
+      <div class="container mt-5">
+      <div class="row">
+
+      <div class="mx-auto">
+       <p>CopyRight Infratop.inc</p>
+      </div>
+
+      </div>
+      </div>
+
+
+    </footer>
   </body>
 </html>
